- new enemies - new bosses - effect for kitty click - some shit

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="top">
         <div class="head">
-            <div class="user-info"><span class="name"></span> - <span class="usd"></span> USD, All power: <span class="all-power">0</span>, Click power: <span class="click-power">1</span></div>
+            <div class="user-info"><span class="name"></span>: <span class="usd"></span> USD, All power: <span class="all-power">0</span>, Click power: <span class="click-power">1</span></div>
         </div>
         <div class="body">
             <div class="char-menu">
